# tilted_landing

./: CMakeLists.txt  LICENSE  README.md  package.xml
config/: BaseAprilTag.yaml
config/apriltag/: Tags.yaml  Tags2.yaml
config/camera_info/: calibration.yaml  calibration_gs.yaml
launch/: usb_camera.launch
misc/: 0066.world  apriltag_sim.launch  beetle_art_omni.urdf.xacro  calibration_bag.py  commands.sh  downward_cam_ee.xacro  requirements.txt
misc/landing_bundle/: model.config  model.sdf
misc/landing_bundle/materials/scripts/: bundle.material
scripts/: auto_exp.sh  beetle_omni_goto.py  calibrate_thresholds.py  landing_smash.py  omni_align.py  omni_beetle_teleop.py  omni_land.py  omni_land_v2.py  omni_nav.py  plot_errors_boxplot.py  plot_jitter_analysis.py  plot_landing.py  run_specific_exp.sh  visual_land.py
