<?xml version="1.0"?>
<package format="2">
  <name>tilted_landing</name>
  <version>0.1.0</version>
  <description>
    Package for planning a landing of an omnidirectional multirotor on a sloped
    surfaces using NMPC and visual servoing, integrated with the JSK framework.
  </description>

  <maintainer email="carlos-craveiro@dragon.t.u-tokyo.ac.jp">CarlosCraveiro</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>smach</depend>
  <depend>smach_ros</depend>
  <depend>tf2_ros</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>

  <depend>aerial_robot_msgs</depend>
  <depend>aerial_robot_planning</depend>

  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-scipy</exec_depend>
  
  <export>
  </export>
</package>
